Fix the alignment of the heading and paragraph

--- a/css/main.css
+++ b/css/main.css
@@ -9,24 +9,35 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  margin: 0;
+}
+
+section {
+  margin: 1.5rem;
+}
+
 h2 {
   display: block;
-  vertical-align: middle;
+  text-align: left;
 }
 
 p {
   display: block;
   max-width: 25em;
+  text-align: left;
 }
 
 img {
   display: block;
   width: 100%;
   max-width: 25em;
-  padding: 1em 2em;
+  padding: 2em 0;
+  vertical-align: middle;
 }
 
 a {
+  text-align: center;
   display: inline-block;
   color: #333;
   background-color: #eee9de;
